Thu May  3 03:41:01 2001  SHIROYAMA Takayuki <psi@fortune.nest.or.jp>

	* configure.in: get --enable-shared to work on MacOS X.

	* Makefile.in: make $(LIBRUBY_SO) depend on miniruby properly.
	Now `make -jN' should work without a problem.

Wed May  2 20:39:35 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* dir.c (rb_glob, rb_iglob): remove unnecessary FNM_PATHNAME.

Wed May  2 11:46:13 2001  K.Kosako  <kosako@sofnec.co.jp>

	* eval.c (block_pass): should not downgrade safe level.

Tue May  1 17:55:58 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (yylex): lex_state after RESCUE_MOD should be EXPR_BEG.

Tue May  1 03:36:50 2001  Akinori MUSHA  <knu@iDaemons.org>

	* sample/irb.rb, lib/irb.rb, lib/irb/*, doc/irb/*: Merge from irb
	0.7.3 and irb-tools 0.7.1.

	* instruby.rb: Install help-message's too.

	* lib/irb/main.rb: This file is not needed anymore.

Thu Apr 26 22:36:11 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in:  don't use tzname on cygwin 1.3.1+.

	* configure.in: add -mieee/-ieee to CFLAGS on OSF1/Alpha
	  to disable "DIVISION BY ZERO" exception.

Thu Apr 26 22:30:43 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_eval): should preserve value of ruby_errinfo.

Thu Apr 26 10:36:09 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

       * eval.c (rb_thread_schedule): infinite sleep should not cause
	  dead lock.

Wed Apr 25 16:40:44 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_flatten_bang): proper recursive detection.

Wed Apr 25 15:36:15 2001  K.Kosako  <kosako@sofnec.co.jp>

       * eval.c (yield_under): need not to prohibit at safe level 4.

Tue Apr 24 16:03:25 2001  Hiroshi Igarashi  <iga@ruby-lang.org>

	* ext/extmk.rb.in: add target `distclean' in Makefile for extlib.
	target `clean' doesn't remove Makefile.

Tue Apr 24 15:57:45 2001  Akinori MUSHA  <knu@iDaemons.org>

	* ext/extmk.rb.in, lib/mkmf.rb: (dir_config) do not add the