@@ -3,9 +3,10 @@ require 'mkmf'
 if /mswin32|mingw/ !~ RUBY_PLATFORM
   have_header("sys/stropts.h")
   have_func("setresuid")
-  $CFLAGS << "-DHAVE_DEV_PTMX" if /cygwin/ === RUBY_PLATFORM
+#  $CFLAGS << "-DHAVE_DEV_PTMX" if /cygwin/ === RUBY_PLATFORM
   if have_func("openpty") or
       have_func("_getpty") or
+      have_func("ptsname") or
       have_func("ioctl")
     create_makefile('pty')
   end
