@@ -359,7 +359,7 @@ getDevice(master,slave)
     int	 i,j;
     char MasterName[DEVICELEN];
 
-#ifdef HAVE_DEV_PTMX
+#ifdef HAVE_PTSNAME
     char *pn;
     void (*s)();
 
@@ -374,7 +374,7 @@ getDevice(master,slave)
 	    if(unlockpt(i) != -1) {
 		if((pn = ptsname(i)) != NULL) {
 		    if((j = open(pn, O_RDWR, 0)) != -1) {
-#if defined I_PUSH
+#if defined I_PUSH && !defined linux
 			if(ioctl(j, I_PUSH, "ptem") != -1) {
 			    if(ioctl(j, I_PUSH, "ldterm") != -1) {
 #endif
@@ -382,7 +382,7 @@ getDevice(master,slave)
 				*slave = j;
 				strcpy(SlaveName, pn);
 				return;
-#if defined I_PUSH
+#if defined I_PUSH && !defined linux
 			    }
 			}
 #endif
